--- a/sass/modules/_achieve-area.scss
+++ b/sass/modules/_achieve-area.scss
@@ -169,6 +169,14 @@
                     padding-left: 130px;
                 }
             }
+            .achieve-item-wrapper{
+                .elementor-col-33{
+                    margin-top: 12px;
+                    &:first-child{
+                        margin-top: 0;
+                    }
+                }
+            }
         }
     }
     .elementor-column{
