--- a/sass/pages/_home-one.scss
+++ b/sass/pages/_home-one.scss
@@ -95,6 +95,9 @@
       @include md{
         padding: 36px;
       }
+      @include sm{
+        padding: 12px;
+      }
       .elementor-col-50{
         &:first-child{
           @include md{
